--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
     />    
-    <title>Coupons</title>
+    <title>Kuponai</title>
   </head>
   <body>
     <noscript>Neveikia JavaScript'as</noscript>
